# HarmonyOS-Smart_Car

./: .gitignore  BUILD.gn  README.md  car_remote_control.py  robot_control.c  robot_control.h  robot_hcsr04.c  robot_l9110s.c  robot_l9110s.h  robot_sg90.c  ssd1306_test.c  sta_entry.c  trace_model.c  udp_control.c  udp_control.h
ssd1306/: BUILD.gn
